--- a/bcrypt-generator/index.html
+++ b/bcrypt-generator/index.html
@@ -147,7 +147,7 @@
 <body>
     <div class="container">
         <h1>BCrypt Hash Generator</h1>
-        
+        <div class="info-text">By pendrag</div>
         <div class="input-group">
             <label for="inputString">Text to Hash:</label>
             <input type="text" id="inputString" placeholder="Enter your text here">
