--- a/bcrypt-generator/index.html
+++ b/bcrypt-generator/index.html
@@ -124,6 +124,12 @@
             color: #7f8c8d;
             margin-top: 5px;
         }
+        .author {
+            font-size: 14px;
+            color: #7f8c8d;
+            margin-top: 5px;
+            text-align: center;
+        } 
         .copied-alert {
             position: fixed;
             top: 20px;
@@ -147,7 +153,7 @@
 <body>
     <div class="container">
         <h1>BCrypt Hash Generator</h1>
-        <div class="info-text">By pendrag</div>
+        <div class="author">By pendrag</div>
         <div class="input-group">
             <label for="inputString">Text to Hash:</label>
             <input type="text" id="inputString" placeholder="Enter your text here">
